<resources>
    <string name="app_name">DevDemo</string>
    <string name="app_title">The is a demo of Android app development</string>
    <string name="demo">Demo</string>
    <string name="hello_world">Hello World</string>
    <string name="welcome">Welcome</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="landscape_layout">Landscape Layout</string>
    <string name="landscape_layout_description">Provide layout for landscape</string>
    <string name="save_state">Save State</string>
    <string name="save_state_description">Save data temporarily</string>
    <string name="save_state_with_mvvm">Save State With MVVM</string>
    <string name="save_state_with_mvvm_description">Save data temporarily (for MVVM)</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="save_preferences_description">Save data permanently</string>
    <string name="timer">Timer</string>
    <string name="timer_description">Count running time</string>
    <string name="room_database">Room Database</string>
    <string name="room_database_description">Easier to work with SQLiteDatabase</string>
    <string name="insert_random_number">Insert random number</string>
    <string name="delete_the_first_number">Delete the first number</string>
    <string name="navigation">Navigation</string>
    <string name="navigation_description">Navigate to different fragment</string>
    <string name="action_bar">Action Bar</string>
    <string name="action_bar_description">Add some button on action Bar</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="bottom_navigation_description">Use bottom navigation bar to go navigate fragments</string>
    <string name="animator">Animator</string>
    <string name="animator_description">Provide some simple animations</string>
    <string name="work_manager">Work Manager</string>
    <string name="work_manager_description">Use work manager to achieve a simple background task</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_drawer_description">Provide a navigation drawer</string>
    <string name="swipe_refresh">Swipe Refresh</string>
    <string name="swipe_refresh_description">Allow user swipe down to refresh</string>
    <string name="save_file">Save File</string>
    <string name="save_file_description">Save the image file</string>
    <string name="view_pager">View Pager</string>
    <string name="view_pager_description">Go to other page by swiping left/right</string>
    <string name="volley">Volley</string>
    <string name="volley_description">Use volley to load image from internet</string>
    <string name="gson">Gson</string>
    <string name="gson_description">Use gson to access web api</string>
    <string name="fcm_notification_channel_id">FcmDemo</string>
    <string name="firebase">Firebase</string>
    <string name="firebase_description">Try fcm notification of firebase</string>
</resources>
